plugins {
    id 'groovy'
    id 'java'
    id 'org.jetbrains.intellij' version '0.6.5'
}

group 'io.github.kings1990'
version '2.0.6'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    maven { name "Alibaba"; url "https://maven.aliyun.com/repository/public" }
    mavenCentral()
}

dependencies {
    compile 'org.projectlombok:lombok:1.18.20'
    compile 'com.google.guava:guava:30.1.1-jre'
    compile 'commons-beanutils:commons-beanutils:20030211.134440'
    compile 'org.springframework:spring-web:5.3.9'
    compile 'com.alibaba:fastjson:1.2.78'
    compile 'cn.hutool:hutool-all:5.7.9'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    plugins = ['java', "com.intellij.properties", "com.intellij.java-i18n"]
    version '2021.1'
    updateSinceUntilBuild false
    downloadSources true
}
patchPluginXml {
    changeNotes """

    <h3>v2.0.6</h3>
    <ul>
        <li>Fix "Light files should have PSI only in one project"</li>
        <li>Add support for PATCH method(添加对PATCH的支持)</li>
    </ul>
    
    <h3>v2.0.5</h3>
    <ul>
        <li>JSON built-in editor support(JSON内置编辑器支持)</li>
        <li>Fix checkbox hidden when change param by text(修复全选参数框隐藏问题)</li>
        <li>Fix headers param show error when reshow the api(修复API回显Headers参数异常)</li>
        <li>Optimized the request progress bar display(优化了请求进度条显示)</li>
    </ul>
    
    <h3>v2.0.4</h3>
    <ul>
        <li>Fix the interface confusion caused by the response content aisle(修复因response内容过道导致的界面错乱问题)</li>
        <li>Optimization of response JSON ultra long display(Response json超长显示优化)</li>
        <li>Optimized icon size(优化图标尺寸)</li>
        <li>Migrate Chinese documents to Gitee(中文文档迁移至gitee)</li>
    </ul>
    
    <h3>v2.0.3</h3>
    <ul>
        <li>Add confirmation when deleting api(删除API的时候增加了确认)</li>
        <li>Added the support of selecting all parameters and inverting selection(添加了参数全选反选的功能)</li>
        <li>Fix param parse for java.util.Set(修复java.util.Set参数解析问题)</li>
        <li>Fix parse like 【@RequestParam(value="address[]") Set<String> address】(修复诸如【@RequestParam(value="address[]") Set<String> address】的参数解析)</li>
        <li>Fix the confusion of the quick add header interface(修复快速添加headers界面错乱)</li>
    </ul>
    
    <h3>v2.0.2</h3>
    <ul>
        <li>Fix that the A request is displayed to the B project in the case of multiple open projects(修复项目多开情况下A请求显示到B项目)</li>
        <li>Fix array and list param parse error decorate by @ResponseBody(修复@ResponseBody修饰的数组与集合解析问题)</li>
        <li>Fix List without generic parse error(修复List参数无泛型解析问题)</li>
        <li>Add support for send and download(添加对文件下载的支持)</li>
        <li>Show progressbar while sending request(发送请求时展示进度条)</li>
        <li>Brand new document[click the doc icon in the toolbar](全新的document,点击工具栏doc图标)</li>
        <li>fix url not generated decorate by @PostMapping that url in path attribute(修复url在@PostMapping中的path属性中获取失败)</li>
        <li>fix duplicate key error in headers(修复headers中有重复key报错)</li>
        <li>Some optimization(一些优化)</li>
    </ul>
    
    <h3>v2.0.1</h3>
    <ul>
        <li>rename from Fast Request to Restful Fast Request</li>
        <li>merge Json、Form URL-Encoded、Multipart to Body Tab to reduce the tool window width(Json、Form URL-Encoded、Multipart Tab合并减小工具窗口宽度)</li>
        <li>fix bug when modify config in global mode(修复全局配置下修改配置报错)</li>
        <li>add get、post、delete、put icon to saved request(将get、post、delete、put图标添加到保存的请求)</li>
        <li>saved request support more search strategy(保存的请求支持更多搜索策略)</li>
        <li>rename tab name from collection to APIs(tab重命名collection->APIs)</li>
        <li>support parse java.time.YearMonth(YearMonth解析支持)</li>
    </ul>
    
    <h3>v2.0.0</h3>
    <ul>
        <li>support store request(支持请求的存储)</li>
        <li>support params optional(支持参数可选)</li>
        <li>optimal iu(优化了UI)</li>
        <li>fix some bugs(修复了一些bug)</li>
    </ul>
    
    <h3>v1.1.5</h3>
    <ul>
        <li>support modify basic type value(基础类型默认值支持修改)</li>
        <li>fix response scroll issue(修复response滚动问题)</li>
        <li>add three string generate strategy(新增了3中string类型参数生成策略)</li>
        <li>optimal configuration guidance(优化配置引导)</li>
        <li>optimized the display of icons in dark and light themes(优化了暗色和淡色主题下图标的显示)</li>
        <li>18n support(国际化支持)</li>
        <li>optimal tool window layout(优化了工具窗口布局)</li>
        <li>fix stuck when debug(修复调试时卡死问题)</li>
    </ul>
    
    <h3>v1.1.4</h3>
    <ul>
        <li>curl support(支持curl拷贝)</li>
        <li>fix send request return error response parse error(修复发送消息异常情况下响应的解析)</li>
        <li>remove domain from url(移除了url上的域名)</li>
        <li>support add params to header from (支持了将参数从response添加到header)</li>
        <li>support pretty and raw response(响应支持美化和原文输出)</li>
        <li>optimize the interaction add/remove json params (优化了添加和删除json参数的交互)</li>
        <li>support expand and collapse json params(支持json参数的展开和收缩)</li>
        <li>support toggle request and response panel(支持伸缩请求和响应面板)</li>
        <li>fix some bugs(修复了一些bug)</li>
    </ul>
    
    <h3>v1.1.3</h3>
    <ul>
        <li>multipartFile support(文件上传支持)</li>
        <li>fix parameters alias bug(参数别名bug修复)</li>
        <li>fix generate array parameters(数组参数生成bug修复)</li>
        <li>controller url fixed variable can replace by config(控制器上的url支持变量替换)</li>
        <li>show tool window when click generate icon(点击图标弹出工具窗口)</li>
        <li>add shortcut to modify config(增加快速跳转至配置页面)</li>
        <li>beautify ui(美化ui)</li>
    </ul>
    
    <h3>v1.1.2</h3>
    <ul>
        <li>add line icon for method</li>
        <li>limit send button click frequency</li>
        <li>optimize response show large text</li>
    </ul>
    
    <h3>v1.1.1</h3>
    <ul>
        <li>fix some bugs</li>
        <li>params can delete batch</li>
    </ul>
    
    <h3>v1.1.0</h3>
    <ul>
        <li>support http request</li>
        <li>support modify and add params</li>
        <li>beautify ui</li>
        <li>fix some bugs</li>
    </ul>
    
    <h3>v1.0.0</h3>
    <ul>
        <li>support Springmvc/SpringBoot</li>
        <li>support custom domain</li>
        <li>support custom params</li>
    </ul>
    """
}
test {
    useJUnitPlatform()
}
runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
    jbrVersion 'jbrsdk-11_0_10-osx-x64-b1314.58'
}

runPluginVerifier {
    ideVersions = ["IIU-2020.3.1", "IIU-2021.2.1"]
//  https://github.com/JetBrains/intellij-plugin-verifier/releases
//  https://data.services.jetbrains.com/products?code=IIU
    verifierPath = '/Users/wilson/Downloads/verifier-cli-1.266-all.jar'
}
